--- a/slides/07.md
+++ b/slides/07.md
@@ -1,7 +1,1 @@
-# In Review
-
-- Most simple and secure web auth requires HTTP-Only Cookies
-- Best user experience for dynamic content requires server-based auth
-- Remix gives you simple utilities for auth
-- No JS in the browser is only useful in that it is proof you don't need app
-  state management in the client
+# Live coding time
