--- a/slides/09.md
+++ b/slides/09.md
@@ -1,11 +1,1 @@
-# Thank you!
-
-👋
-
-🐦 https://twitter.com/kentcdodds
-
-💿 https://remix.run
-
-💻 https://github.com/kentcdodds/auth-with-remix-talk
-
-🚀 https://remix-jokes.lol
+# You are priceless
